--- a/src/AppleMAUsIc/AppleMAUsIc/Pages/ListenPage.xaml
+++ b/src/AppleMAUsIc/AppleMAUsIc/Pages/ListenPage.xaml
@@ -1,217 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:conv="clr-namespace:AppleMAUsIc.Converters"
-             xmlns:controls="clr-namespace:AppleMAUsIc.Pages.CustomControls"
-             xmlns:model="clr-namespace:AppleMAUsIc.Model"
              x:Class="AppleMAUsIc.Pages.ListenPage"
-             Title="ListenPage">
-    <ScrollView>
-        <VerticalStackLayout
-            Margin="24, 16, 30, 16">
-            <Border MaximumHeightRequest="300"
-                    MaximumWidthRequest="300"
-                    HorizontalOptions="Center">
-                <Image
-                    x:Name="coverImage"
-                    Aspect="AspectFill"
-                    Source="{Binding CoverImageName}">
-                    <Image.Shadow>
-                        <Shadow Brush="{StaticResource Black}"
-                                Offset="20, 20"
-                                Radius="20"
-                                Opacity="0.8" />
-                    </Image.Shadow>
-                </Image>
-                <Border.StrokeShape>
-                    <RoundRectangle CornerRadius="10" />
-                </Border.StrokeShape>
-                <Border.Shadow>
-                    <Shadow Brush="{StaticResource Black}"
-                            Offset="10, 10"
-                            Radius="10"
-                            Opacity="0.2" />
-                </Border.Shadow>
-            </Border>
-        
-            <Label
-                FontSize="Title"
-                Text="{Binding Name}"
-                FontAttributes="Bold"
-                FontFamily=""
-                HorizontalOptions="Center"
-                Margin="0, 16, 0, 0"/>
-            <Label
-                FontSize="Subtitle"
-                Text="{Binding Author}"
-                VerticalOptions="Center" 
-                HorizontalOptions="Center"
-                TextColor="{StaticResource Primary}"/>
-            <Label
-                FontSize="Small"
-                FontAttributes="Bold"
-                FontFamily=""
-                VerticalOptions="Center" 
-                HorizontalOptions="Center"
-                TextColor="{StaticResource Gray400}"
-                Margin="0, 4, 0, 16">
-
-                <Label.Text>
-                    <MultiBinding StringFormat="{}{0}・{1:yyyy}・{2}">
-                        <Binding Path="KindOfMusic" FallbackValue="Jazz" />
-                        <Binding Path="ReleaseDate" FallbackValue="1966" />
-                        <Binding Path="SoundQuality" FallbackValue="Losslesss" Converter="{conv:QualityTypeToStringConverter}" />
-                    </MultiBinding>
-                </Label.Text>
-            </Label>
-
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-
-                <Border
-                    Grid.Column="0"
-                    StrokeThickness="0"
-                    MaximumWidthRequest="200"
-                    Margin="0, 0, 10, 0">
-                    <Border.StrokeShape>
-                        <RoundRectangle CornerRadius="10" />
-                    </Border.StrokeShape>
-                    <Border.Content>
-                        <HorizontalStackLayout
-                            VerticalOptions="Center"
-                            HorizontalOptions="Center"
-                            Margin="8, 6, 8, 6"
-                            Padding="8, 8, 8, 8">
-                            <Image
-                                Source="ic_play.png"
-                                MaximumHeightRequest="24"
-                                MaximumWidthRequest="24"/>
-                            <Label
-                                Text="Lecture"
-                                FontAttributes="Bold"
-                                FontFamily=""
-                                FontSize="Default"
-                                TextColor="{StaticResource Primary}"
-                                Margin="8, 0, 0, 0"
-                                VerticalOptions="Center"/>
-                        </HorizontalStackLayout>
-                    </Border.Content>
-                </Border>
-
-                <Border
-                    Grid.Column="1"
-                    StrokeThickness="0"
-                    MaximumWidthRequest="200"
-                    Margin="10, 0, 0, 0">
-                    <Border.StrokeShape>
-                        <RoundRectangle CornerRadius="10" />
-                    </Border.StrokeShape>
-                    <Border.Content>
-                        <HorizontalStackLayout
-                            VerticalOptions="Center"
-                            HorizontalOptions="Center"
-                            Margin="8, 6, 8, 6"
-                            Padding="8, 0, 8, 0">
-                            <Image
-                                Source="ic_twisted_arrows.png"
-                                MaximumHeightRequest="24"
-                                MaximumWidthRequest="24" />
-                            <Label
-                                Text="Aléatoire"
-                                FontAttributes="Bold"
-                                FontFamily=""
-                                FontSize="Default"
-                                TextColor="{StaticResource Primary}"
-                                Margin="8, 0, 0, 0"
-                                VerticalOptions="Center"
-                                HorizontalOptions="Center" />
-                        </HorizontalStackLayout>
-                    </Border.Content>
-                </Border>
-            </Grid>
-
-            <Line StrokeThickness="1" Margin="0, 28, 0, 0"/>
-
-            <!--CollectionView
-                ItemsSource="{Binding Tracks}"
-                Margin="-12, 0, 0, 0"
-                SelectionMode="None"
-                BackgroundColor="{StaticResource Key=Black}">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <ViewCell.View>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto" />
-                                    <ColumnDefinition Width="auto" />
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="auto" />
-                                    <ColumnDefinition Width="auto" />
-                                </Grid.ColumnDefinitions>
-
-                                <Image
-                                    Grid.Column="0"
-                                    Source="ic_star.png"
-                                    IsOpaque="{Binding IsSingle}"
-                                    MaximumWidthRequest="10"/>
-        
-                                <Label
-                                    Grid.Column="1"
-                                    Margin="12, 0"
-                                    FontSize="Default"
-                                    Text="{Binding Position, FallbackValue=1}" />
-
-                                <Label
-                                    Grid.Column="2"
-                                    FontSize="Default"
-                                    Text="{Binding Title, FallbackValue='Counting Stars'}" />
-
-                                <Image
-                                    Grid.Column="3"
-                                    Margin="8, 0, 8, 0"
-                                    Source="ic_download.png"
-                                    MaximumWidthRequest="12" />
-
-                                <Image
-                                    Grid.Column="4"
-                                    Margin="8, 0, 0, 0"
-                                    Source="ic_3_dots.png"
-                                    MaximumWidthRequest="18"/>
-                                </Grid>
-                                </ViewCell.View>
-                            </ViewCell>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-
-            </CollectionView>
-
-            <Label
-                Text="{Binding ReleaseDate, StringFormat='{}{0:dd MMMM yyyy}'}"
-                FontSize="Small"
-                TextColor="{StaticResource Gray400}"
-                Margin="0, 16, 0, 0"/>
-
-            <Label
-                FontSize="Small"
-                TextColor="{StaticResource Gray400}" >
-
-                <Label.Text>
-                    <MultiBinding StringFormat="{}{0} morceaux, {1:F0} minutes">
-                        <Binding Path="NumberOfTracks" FallbackValue="10" />
-                        <Binding Path="TotalDuration.TotalMinutes" FallbackValue="47" />
-                    </MultiBinding>
-                </Label.Text>
-            </Label>
-
-            <Label
-                Text="{Binding Copyright}"
-                FontSize="Small"
-                TextColor="{StaticResource Gray400}" /-->
-
-        </VerticalStackLayout>
-    </ScrollView>
+             Title="Listen">
+    <VerticalStackLayout>
+        <Label
+            Text="Bad Gateway."
+            VerticalOptions="Center" 
+            HorizontalOptions="Center"/>
+    </VerticalStackLayout>
 </ContentPage>
