--- a/src/AppleMAUsIc/AppleMAUsIc/Pages/SearchPage.xaml
+++ b/src/AppleMAUsIc/AppleMAUsIc/Pages/SearchPage.xaml
@@ -2,10 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppleMAUsIc.Pages.SearchPage"
-             Title="SearchPage">
+             Title="Search">
     <VerticalStackLayout>
         <Label 
-            Text="Search"
+            Text="I'm a teapot!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
