--- a/src/AppleMAUsIc/AppleMAUsIc/Pages/CustomControls/TrackCellView.xaml
+++ b/src/AppleMAUsIc/AppleMAUsIc/Pages/CustomControls/TrackCellView.xaml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ViewCell xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppleMAUsIc.Pages.CustomControls.TrackCellView">
 
-    <Grid>
+    <Grid VerticalOptions="Center" Padding="0, 4, 0, 2">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="10" />
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="auto" />
@@ -15,8 +15,8 @@
         <Image
             Grid.Column="0"
             Source="ic_star.png"
-            IsOpaque="{Binding IsSingle}"
-            MaximumWidthRequest="10"/>
+            MaximumWidthRequest="10"
+            IsVisible="{Binding IsSingle}"/>
         
         <Label
             Grid.Column="1"
@@ -27,7 +27,7 @@
         <Label
             Grid.Column="2"
             FontSize="Default"
-            Text="{Binding TrackTitle, FallbackValue='Counting Stars'}" />
+            Text="{Binding Title, FallbackValue='Counting Stars'}" />
 
         <Image
             Grid.Column="3"
@@ -40,6 +40,5 @@
             Margin="8, 0, 0, 0"
             Source="ic_3_dots.png"
             MaximumWidthRequest="18"/>
-
     </Grid>
-</ContentView>
+</ViewCell>
