--- a/src/AppleMAUsIc/AppleMAUsIc/Pages/ExplorePage.xaml
+++ b/src/AppleMAUsIc/AppleMAUsIc/Pages/ExplorePage.xaml
@@ -2,10 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppleMAUsIc.Pages.ExplorePage"
-             Title="ExplorePage">
+             Title="Explore">
     <VerticalStackLayout>
         <Label 
-            Text="Explore"
+            Text="Sorry, there is nothing at this address."
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
