--- a/src/AppleMAUsIc/AppleMAUsIc/Pages/RadioPage.xaml
+++ b/src/AppleMAUsIc/AppleMAUsIc/Pages/RadioPage.xaml
@@ -2,10 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppleMAUsIc.Pages.RadioPage"
-             Title="RadioPage">
+             Title="Radio">
     <VerticalStackLayout>
         <Label 
-            Text="Radio"
+            Text="Not authorized."
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
     </VerticalStackLayout>
