[#2] Add custom view for the playing bar

--- a/src/AppleMAUsIc/AppleMAUsIc/Resources/Styles/Styles.xaml
+++ b/src/AppleMAUsIc/AppleMAUsIc/Resources/Styles/Styles.xaml
@@ -293,7 +293,7 @@
     <Style TargetType="Shadow">
         <Setter Property="Radius" Value="15" />
         <Setter Property="Opacity" Value="0.5" />
-        <Setter Property="Brush" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource White}}" />
+        <Setter Property="Brush" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}" />
         <Setter Property="Offset" Value="10,10" />
     </Style>
 
