[#2] Add control for album cover and fix indings

--- a/src/AppleMAUsIc/AppleMAUsIc/Pages/CustomControls/TrackCellView.xaml
+++ b/src/AppleMAUsIc/AppleMAUsIc/Pages/CustomControls/TrackCellView.xaml
@@ -27,7 +27,7 @@
         <Label
             Grid.Column="2"
             FontSize="Default"
-            Text="{Binding Title, FallbackValue='Counting Stars'}" />
+            Text="{Binding TrackTitle, FallbackValue='Counting Stars'}" />
 
         <Image
             Grid.Column="3"
