--- a/src/AppleMAUsIc/AppleMAUsIc/Pages/CustomControls/MusicPlayingBarView.xaml
+++ b/src/AppleMAUsIc/AppleMAUsIc/Pages/CustomControls/MusicPlayingBarView.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:AppleMAUsIc.Pages.CustomControls"
              x:Class="AppleMAUsIc.Pages.CustomControls.MusicPlayingBarView">
     <Grid VerticalOptions="Center">
         <Grid.ColumnDefinitions>
@@ -10,32 +11,14 @@
             <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
 
-        <Border MaximumHeightRequest="60"
-                        MaximumWidthRequest="60"
-                        HorizontalOptions="Center"
-                        Margin="14, 10">
-            <Image
-                Aspect="AspectFill"
-                Source="{Binding CoverImageName}">
-                <Image.Shadow>
-                    <Shadow Offset="20, 20"
-                            Radius="20"
-                            Opacity="0.8" />
-                </Image.Shadow>
-            </Image>
-            <Border.StrokeShape>
-                <RoundRectangle CornerRadius="10" />
-            </Border.StrokeShape>
-            <Border.Shadow>
-                <Shadow Offset="10, 10"
-                        Radius="10"
-                        Opacity="0.2" />
-            </Border.Shadow>
+        <controls:AlbumCoverView
+            ImageWidth="60"
+            ImageHeight="60"
+            CoverImageName="{Binding CoverImageName}" />
 
-        </Border>
         <Label
             Grid.Column="1"
-            Text="{Binding Title, FallbackValue='Counting Stars'}"
+            Text="{Binding TrackTitle, FallbackValue='Counting Stars'}"
             FontSize="Header"
             VerticalOptions="Center" 
             HorizontalOptions="Start"/>
