--- a/src/AppleMAUsIc/AppleMAUsIc/Resources/Styles/Styles.xaml
+++ b/src/AppleMAUsIc/AppleMAUsIc/Resources/Styles/Styles.xaml
@@ -177,7 +177,7 @@
     </Style>
 
     <Style TargetType="ListView">
-        <Setter Property="SeparatorColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource White}}" />
+        <Setter Property="SeparatorColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray500}}" />
         <Setter Property="RefreshControlColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray900}}" />
     </Style>
 
